Start sketching out new model warping configuration design (#891 #889 #894)

--- a/tests/TestOpenSimCreator/CMakeLists.txt
+++ b/tests/TestOpenSimCreator/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(TestOpenSimCreator
     Documents/Model/TestUndoableModelStatePair.cpp
     Documents/ModelWarper/TestCachedModelWarper.cpp
     Documents/ModelWarper/TestFrameWarperFactories.cpp
+    Documents/ModelWarper/TestModelWarperConfiguration.cpp
     Documents/ModelWarper/TestPointWarperFactories.cpp
     Documents/ModelWarper/TestWarpableModel.cpp
     Documents/OutputExtractors/TestConstantOutputExtractor.cpp
