Add App custom gameloop support (e.g. App::setup_main_loop, App::do_main_loop_step, App::teardown_main_loop)

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -245,6 +245,7 @@ add_library(oscar STATIC
     Platform/App.cpp
     Platform/App.h
     Platform/AppClock.h
+    Platform/AppMainLoopStatus.h
     Platform/AppMetadata.cpp
     Platform/AppMetadata.h
     Platform/AppSettings.cpp
@@ -426,7 +427,7 @@ add_library(oscar STATIC
     UI.h
     Utils.h
     Variant.h
- )
+  )
 
 target_include_directories(oscar PUBLIC
 
