Centralize transparent string hashing to TransparentStringViewHasher

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -402,6 +402,7 @@ add_library(oscar STATIC
     Utils/TemporaryFile.cpp
     Utils/TemporaryFile.h
     Utils/TemporaryFileParameters.h
+    Utils/TransparentStringViewHasher.h
     Utils/Typelist.h
     Utils/UID.cpp
     Utils/UID.h
