Rename Eulers -> EulerAngles and change gizmo API to use SimTK::Transform

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -202,7 +202,7 @@ add_library(oscar STATIC
     Maths/Ellipsoid.h
     Maths/EllipsoidFunctions.h
     Maths/EulerPerspectiveCamera.h
-    Maths/Eulers.h
+    Maths/EulerAngles.h
     Maths/FrustumPlanes.h
     Maths/Functors.h
     Maths/GeometricFunctions.h
