Add SharedPreHashedString impl.

--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -92,6 +92,7 @@ add_executable(testoscar
     Utils/TestNullStreambuf.cpp
     Utils/TestScopedLifetime.cpp
     Utils/TestSharedLifetimeBlock.cpp
+    Utils/TestSharedPreHashedString.cpp
     Utils/TestScopedLifetime.cpp
     Utils/TestStringHelpers.cpp
     Utils/TestStringName.cpp
