--- a/tests/TestOpenSimCreator/CMakeLists.txt
+++ b/tests/TestOpenSimCreator/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(TestOpenSimCreator
     Graphics/TestSimTKDecorationGenerator.cpp
     MetaTests/TestOpenSimLibraryAPI.cpp
     Platform/TestRecentFiles.cpp
+    UI/Shared/TestFunctionCurveViewerPopup.cpp
     UI/Widgets/TestAddComponentPopup.cpp
     UI/TestAllRegisteredOpenSimCreatorTabs.cpp
     Utils/TestOpenSimHelpers.cpp
