Refactor EnumHelpers and enum uses a little, move osc::Flags<T> into its own header

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -375,6 +375,7 @@ add_library(oscar STATIC
     Utils/FilenameExtractor.h
     Utils/FilesystemHelpers.cpp
     Utils/FilesystemHelpers.h
+    Utils/Flags.h
     Utils/HashHelpers.h
     Utils/LifetimedPtr.h
     Utils/LifetimeWatcher.h
