Change SceneDecoration to hold a variant of color/material/material+properties

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -112,6 +112,7 @@ add_library(oscar STATIC
     Graphics/Scene/SceneCollision.h
     Graphics/Scene/SceneDecoration.h
     Graphics/Scene/SceneDecorationFlags.h
+    Graphics/Scene/SceneDecorationShading.h
     Graphics/Scene/SceneHelpers.cpp
     Graphics/Scene/SceneHelpers.h
     Graphics/Scene/SceneRenderer.cpp
