Add model warper to splash screen, but clearly marked as experimental

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -314,6 +314,8 @@ add_library(OpenSimCreator STATIC
     UI/ModelWarper/MainMenu.h
     UI/ModelWarper/ModelWarperTab.cpp
     UI/ModelWarper/ModelWarperTab.h
+    UI/ModelWarper/ModelWarperTabInitialPopup.cpp
+    UI/ModelWarper/ModelWarperTabInitialPopup.h
     UI/ModelWarper/ModelWarperUIHelpers.cpp
     UI/ModelWarper/ModelWarperUIHelpers.h
     UI/ModelWarper/ResultModelViewerPanel.cpp
