Refactor DepthStencilFormat OpenGL mappings into traits object

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -104,6 +104,8 @@ add_library(oscar STATIC
 
     Graphics/OpenGL/CPUDataTypeOpenGLTraits.h
     Graphics/OpenGL/CPUImageFormatOpenGLTraits.h
+    Graphics/OpenGL/DepthStencilFormatOpenGLTraits.h
+    Graphics/OpenGL/DepthStencilFormatOpenGLHelpers.h
     Graphics/OpenGL/Gl.cpp
     Graphics/OpenGL/Gl.h
     Graphics/OpenGL/TextureFormatOpenGLTraits.h
