Add+rollout MeshDepthWritingMaterial

--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(testoscar
     Graphics/Detail/TestVertexAttributeHelpers.cpp
     Graphics/Detail/TestVertexAttributeFormatList.cpp
     Graphics/Detail/TestVertexAttributeList.cpp
+    Graphics/Materials/TestMeshDepthWritingMaterial.cpp
     Graphics/Scene/TestSceneCache.cpp
     Graphics/Scene/TestSceneHelpers.cpp
     Graphics/TestAntiAliasingLevel.cpp
