--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -99,6 +99,8 @@ add_library(oscar STATIC
 
     Graphics/Materials/MeshBasicMaterial.cpp
     Graphics/Materials/MeshBasicMaterial.h
+    Graphics/Materials/MeshDepthWritingMaterial.cpp
+    Graphics/Materials/MeshDepthWritingMaterial.h
     Graphics/Materials/MeshPhongMaterial.cpp
     Graphics/Materials/MeshPhongMaterial.h
 
