--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(oscar_compiler_configuration)
 add_subdirectory(oscar)
+add_subdirectory(oscar_bookofshaders)
 add_subdirectory(oscar_demos)
 add_subdirectory(oscar_learnopengl)
 if (${OSC_BUILD_OPENSIMCREATOR})
