Ensure selected and hovered 2D UI elements have different colors (#916)

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -222,6 +222,7 @@ add_library(OpenSimCreator STATIC
 
     Platform/OpenSimCreatorApp.cpp
     Platform/OpenSimCreatorApp.h
+    Platform/OSCColors.h
     Platform/RecentFile.h
     Platform/RecentFiles.cpp
     Platform/RecentFiles.h
