Refactor OpenSim-independent simbody code into oscar_simbody

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(oscar_bookofshaders)
 add_subdirectory(oscar_demos)
 add_subdirectory(oscar_learnopengl)
 if (${OSC_BUILD_OPENSIMCREATOR})
+    add_subdirectory(oscar_simbody)
     add_subdirectory(OpenSimThirdPartyPlugins)
     add_subdirectory(OpenSimCreator)
 endif()
