Clean up CMakeLists.txt a bit

--- a/apps/hellotriangle/CMakeLists.txt
+++ b/apps/hellotriangle/CMakeLists.txt
@@ -1,10 +1,14 @@
+find_package(imgui REQUIRED CONFIG)
+find_package(ImGuiColorTextEdit REQUIRED CONFIG)
+find_package(lua REQUIRED CONFIG)
+
 add_executable(hellotriangle hellotriangle.cpp)
 
-find_package(lua CONFIG REQUIRED)
-
-target_link_libraries(hellotriangle PUBLIC
+target_link_libraries(hellotriangle PRIVATE
     oscar_compiler_configuration  # so that it uses standard compiler flags etc.
     oscar
+    imgui
+    ImGuiColorTextEdit
     lua
 )
 
