Refactor ui_context to use new osc::Screen and avoid App global functions

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -295,6 +295,7 @@ add_library(oscar STATIC
     Platform/ResourcePath.h
     Platform/ResourceStream.cpp
     Platform/ResourceStream.h
+    Platform/Screen.h
     Platform/Screenshot.h
     Platform/ScreenshotAnnotation.h
 
